# verifypn

./: .bzrignore  .gitignore  CMakeLists.txt  LICENSE  README.md  README.mkd  VerifyPN.cpp  glpk-warning.patch  makefile  makefile.linux32  makefile.linux64  makefile.mingw32  makefile.mingw32msvc  makefile.osx  makefile.osx32  makefile.osx64  makefile.w64-mingw32  makefile.win32  makefile.win64  mcc_tester.py  petapaal.cpp  rules.mk  run_tests.sh  sbatch_job.sh  setup_bench.sh  spot-windows.patch  toolchain-x86_64-w64-mingw32.cmake  upload_to_mcc.sh  verifypn-experimental-linux64
boost_tests/: BinaryPrinterTests.cpp  CMakeLists.txt  PQLParserTests.cpp  PredicateCheckerTests.cpp  PushNegationTests.cpp  XMLPrinterTests.cpp  color_test.cpp  explicit_engine_test.cpp  game_test.cpp  hyper_ltl_test.cpp  ltl_test.cpp  reachability_test.cpp  reduction.cpp  utils.h
boost_tests/models/: all_place_interval.pnml  all_place_interval.xml  all_place_product.pnml  all_place_product.xml  color_match.pnml  color_match.xml  color_mismatch.pnml  color_mismatch.xml  error-all-token-ring-2.pnml  error-all-token-ring-2.xml  error-all-token-ring.pnml  error-all-token-ring.xml  fixpoint_and_partitioning_error.pnml  fixpoint_and_partitioning_error.xml  hyper1.pnml  hyper1.xml  hyper_stutter.pnml  hyper_stutter.xml  initial-all-expression.pnml  ltl_kbound.pnml  ltl_kbound.xml  rule_D.pnml  rule_D.xml  subtraction_bug.pnml  subtraction_bug.xml  subtraction_error_unfolding_nonempty_marking.pnml  subtraction_error_unfolding_nonempty_marking.xml  subtraction_unfolding.pnml  subtraction_unfolding.xml  unfolding_and_overapprox_cpn_subtraction_error.pnml  unfolding_and_overapprox_cpn_subtraction_error.xml  unfolding_loop.pnml  unfolding_loop.xml
boost_tests/models/Angiogenesis-PT-01/: CTLCardinality.xml  CTLFireability.xml  LTLCardinality.xml  LTLFireability.xml  ReachabilityCardinality.xml  ReachabilityFireability.xml  UpperBounds.xml  model.pnml
boost_tests/models/DiscoveryGPU-PT-15a/: CTLCardinality.xml  model.pnml  ruleDerr.xml
boost_tests/models/Kanban-PT-02000/: errG.xml  model.pnml
boost_tests/models/NeoElection-COL-3/: ReachabilityCardinality.xml  model.pnml
boost_tests/models/Peterson-COL-2/: ReachabilityCardinality.xml  model.pnml
boost_tests/models/PhilosophersDyn-COL-03/: ReachabilityCardinality.xml
boost_tests/models/Referendum-PT-0015/: LTLCardinality.xml  model.pnml
boost_tests/models/UtilityControlRoom-COL-Z2T3N04/: ReachabilityCardinality.xml
boost_tests/models/explicit-engine/: referendum_colored_subtraction.pnml  referendum_colored_subtraction.xml  subtraction_with_vars.pnml  subtraction_with_vars.xml
boost_tests/models/games/: AG_por_fail.pnml  AG_por_fail.xml  algorithm 1 counterexample 2.pnml  algorithm 1 counterexample 2.q  algorithm 1 counterexample 2.xml  algorithm 1 counterexample.pnml  algorithm 1 counterexample.q  algorithm 1 counterexample.q2  algorithm 1 counterexample.q3  algorithm 1 counterexample.q4  algorithm 1 counterexample.xml  cycle test false.pnml  cycle test false.q  cycle test false.xml  cycle test true 2.pnml  cycle test true 2.xml  cycle test true 3.pnml  cycle test true 3.xml  gen_model_0.pnml  gen_model_0.xml  player 2 less reduction.pnml  player 2 less reduction.q  player 2.pnml  safe test.pnml  safe test.xml  unsafe test.pnml  unsafe test.q  unsafe test.xml
boost_tests/models/intrangeNotOne/: model.pnml  query.xml
src/: CMakeLists.txt  LTLMain.cpp  LTLPrint.cpp  VerifyPN.cpp  explicitMain.cpp  main.cpp
src/CTL/: CMakeLists.txt  CTLEngine.cpp  CTLResult.cpp
src/CTL/Algorithm/: CMakeLists.txt  CertainZeroFPA.cpp  FixedPointAlgorithm.cpp  LocalFPA.cpp
src/CTL/DependencyGraph/: CMakeLists.txt  Configuration.cpp
src/CTL/PetriNets/: CMakeLists.txt  OnTheFlyDG.cpp
src/CTL/SearchStrategy/: CMakeLists.txt  HeuristicSearch.cpp  RDFSSearch.cpp  SearchStrategy.cpp
src/LTL/: CMakeLists.txt  LTLMain.cpp  LTLSearch.cpp  LTLToBuchi.cpp  ProductSuccessorGenerator.cpp  Replay.cpp  SpotToPQL.cpp  TarjanSuccessorGenerator.cpp  _LTL.cpp
src/LTL/Algorithm/: AutomataStubbornTarjan.cpp  CMakeLists.txt  InterestingStubbornTarjanModelChecker.cpp  LTLToBuchi.cpp  ModelChecker.cpp  NestedDepthFirstSearch.cpp  ProductPrinter.cpp  ProductSuccessorGenerator.cpp  RandomNDFS.cpp  ResumingStubbornTarjan.cpp  ResumingSuccessorGenerator.cpp  StubbornTarjanModelChecker.cpp  TarjanModelChecker.cpp  VisibleStubbornTarjanModelChecker.cpp
src/LTL/LTL_algorithm/: CMakeLists.txt  LTLToBuchi.cpp  ModelChecker.cpp  NestedDepthFirstSearch.cpp  ProductPrinter.cpp  ProductSuccessorGenerator.cpp  TarjanModelChecker.cpp
src/LTL/Simplification/: CMakeLists.txt  SpotToPQL.cpp
src/LTL/Structures/: CMakeLists.txt  GuardInfo.cpp
src/LTL/Stubborn/: AutomatonStubbornSet.cpp  CMakeLists.txt  EvalAndSetVisitor.cpp  InterestingLTLStubbornSet.cpp  LTLEvalAndSetVisitor.cpp  LTLStubbornSet.cpp  SafeAutStubbornSet.cpp  VisibilityVisitor.cpp  VisibleLTLStubbornSet.cpp  VisibleTransitionVisitor.cpp
src/LTL/SuccessorGeneration/: AutomatonHeuristic.cpp  CMakeLists.txt  CompoundGenerator.cpp  HeuristicLexer.l  HeuristicParser.y  ResumingSuccessorGenerator.cpp  WeightedAutomatonHeuristic.cpp
src/PetriEngine/: CMakeLists.txt  Extrapolator.cpp  PetriNet.cpp  PetriNetBuilder.cpp  Reducer.cpp  ReducingSuccessorGenerator.cpp  STSolver.cpp  SuccessorGenerator.cpp  TokenEliminator.cpp  TraceReplay.cpp  options.cpp
src/PetriEngine/Colored/: ArcVarMultisetVisitor.cpp  BindingGenerator.cpp  CExprToString.cpp  CMakeLists.txt  CloningVisitor.cpp  ColoredPetriNetBuilder.cpp  Colors.cpp  EquivalenceClass.cpp  EquivalenceVec.cpp  EvaluationVisitor.cpp  ForwardFixedPoint.cpp  GuardRestrictor.cpp  IntervalGenerator.cpp  Multiset.cpp  PartitionBuilder.cpp  Patterns.cpp  PnmlWriter.cpp  PnmlWriterColorExprVisitor.cpp  StablePlaceFinder.cpp  Unfolder.cpp  VarMultiset.cpp  VarReplaceVisitor.cpp  VariableSymmetry.cpp
src/PetriEngine/ExplicitColored/: ArcCompiler.cpp  ArcExpression.cpp  (+16 more)
src/PetriParse/: AbstractPetriNetBuilder.cpp  CMakeLists.txt  PNMLParser.cpp  QueryBinaryParser.cpp  QueryXMLParser.cpp
(+1780 files in other folders)
